# ProjetoCrypto

./: .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  logging.py  main.py
backend/app/api/: auth.py  dependencies.py  websocket.py
backend/app/api/routes/: auth.py  controls.py  events.py  funding.py  health.py  metrics.py  positions.py
backend/app/core/: database.py  metrics.py  redis.py
backend/app/core/data/: collector.py  models.py  state.py  ws_feed.py
backend/app/core/exchange/: base.py  binance.py  bybit.py  factory.py  gate.py  okx.py  types.py
backend/app/core/execution/: engine.py  live.py  paper.py  reconciler.py
backend/app/core/ml/: features.py  predictor.py
backend/app/core/risk/: circuit_breaker.py  limits.py  manager.py
backend/app/core/strategy/: carry.py  funding_arb.py  grid.py  scoring.py  signals.py
backend/app/services/: event_logger.py  funding_loop.py  multi_scheduler.py  notifier.py  portfolio.py  scheduler.py  shutdown.py
backend/scripts/: backtest.py  seed_historical.py  train_model.py
backend/tests/unit/: test_api.py  test_auth.py  test_config.py  test_connectors.py  test_data_collector.py  test_exchange_types.py  test_execution.py  test_health.py  test_risk_manager.py  test_scoring.py  test_shutdown.py  test_strategy.py  test_websocket.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  (+1 more)
scripts/: backtest.py  seed_historical.py
(+23 files in other folders)
